Remove IWireframeAABBProvider, just use the shape