@@ -25,13 +25,10 @@ import net.minecraft.world.Container;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.AABB;
-import net.minecraft.world.phys.shapes.VoxelShape;
 
 import vazkii.botania.api.BotaniaAPI;
-import vazkii.botania.api.block.IWireframeAABBProvider;
 import vazkii.botania.api.item.ICoordBoundItem;
 import vazkii.botania.api.item.IWireframeCoordinateListProvider;
 import vazkii.botania.client.core.helper.RenderHelper;
@@ -40,7 +37,6 @@ import vazkii.botania.common.core.handler.ConfigHandler;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public final class BoundTileRenderer {
 	private static final MultiBufferSource.BufferSource LINE_BUFFERS = MultiBufferSource.immediateWithBuffers(Util.make(() -> {
@@ -118,15 +114,9 @@ public final class BoundTileRenderer {
 
 		Level world = Minecraft.getInstance().level;
 		BlockState state = world.getBlockState(pos);
-		Block block = state.getBlock();
-		List<AABB> list;
-
-		if (block instanceof IWireframeAABBProvider) {
-			list = ((IWireframeAABBProvider) block).getWireframeAABB(world, pos);
-		} else {
-			VoxelShape shape = state.getShape(world, pos);
-			list = shape.toAabbs().stream().map(b -> b.move(pos)).collect(Collectors.toList());
-		}
+		List<AABB> list = state.getShape(world, pos)
+				.toAabbs().stream()
+				.map(b -> b.move(pos)).toList();
 
 		if (!list.isEmpty()) {
 			ms.scale(1F, 1F, 1F);
